package edu.ntnu.idatt2003.lectures.interfaces.samemethod;

/**
 * The Pet interface represents a pet.
 */
public interface Pet {
  /**
   * Gets the full name of the pet.
   *
   * @return the full name of the pet
   */
  String getFullName();

  /**
   * Gets the gender of the pet.
   *
   * @return the gender of the pet
   */
  String getGender();

  /**
   * Gets the owner of the pet.
   *
   * @return the owner of the pet
   */
  String getOwner();
}
